root change to product

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <app-header></app-header>
-  <app-root></app-root>
+ <app-product></app-product>
   <app-footer></app-footer>
 </body>
 </html>
